--- a/index.html
+++ b/index.html
@@ -3,39 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pizzarendelés Formok</title>
 </head>
 <body>
-    <h3>Pizza rendelő űrlap</h3>
+    <h1>Pizza rendelő űrlap</h1>
 
-    <form>
+    <form method="post" action="https://httpbin.org/post">
         <label> Név: 
             <input type="text" name="name" placeholder="Pl. Kalap Jakab" maxlength="20" required>
-        </label>
-        <br>     
+        </label> 
         <label> Telefonszám: 
             <input type="tel" name="phone" placeholder="+363010050" maxlength="10" required>
-        </label>
-        <br>     
+        </label> 
         <label> E-mail: 
             <input type="email" name="email" placeholder="Pl. kalap@gmail.com" maxlength="25" required>
         </label>
         <br>
 
         <fieldset>
-        <legend>Pizza mérete:</legend>
-        <label> 
-            <input type="radio" name="size" required> Családi
-        </label>
-        <br>
-        <label> 
-            <input type="radio" name="size" required> Közepes
-        </label>
-        <br>
-        <label> 
-            <input type="radio" name="size" required> Kicsi
-        </label>
+            <legend>Pizza mérete</legend>
+            <label> 
+                <input type="radio" name="size" required value="csaladi"> Családi
+            </label>
+            <br>
+            <label> 
+                <input type="radio" name="size" required value="kozepes"> Közepes
+            </label>
+            <br>
+            <label> 
+                <input type="radio" name="size" required value="kicsi"> Kicsi
+            </label>
         </fieldset>
+
+
+        <fieldset>
+            <legend>Feltétek</legend>
+            <label> 
+                <input type="checkbox" name="feltet" value="mozzarella sajt"> Mozzarella sajt
+            </label>
+            <br>
+            <label> 
+                <input type="checkbox" name="feltet" value="fetasajt"> Fetasajt
+            </label>
+            <br>
+            <label> 
+                <input type="checkbox" name="feltet" value="kukorica"> Kukorica
+            </label>
+            <br>
+            <label> 
+                <input type="checkbox" name="feltet" value="bacon"> Bacon
+            </label>
+        </fieldset>
+
+
+        <fieldset>
+            <legend>Megjegyzés</legend>
+            <textarea name="megjegyzes" id="megjegyzes_mezo" maxlength="200" placeholder="ide írhatod a megjegyzésed" cols="100" rows="5"></textarea>
+        </fieldset>
+
+        <button type="submit">Elküldés</button>
+        <button type="reset">Visszaállítás</button>
     </form>
 </body>
 </html>
